@@ -16,7 +16,7 @@
 #define TRACKER_PROTO_CMD_STORAGE_JOIN          81
 #define FDFS_PROTO_CMD_QUIT			82
 #define TRACKER_PROTO_CMD_STORAGE_BEAT          83  //heart beat
-#define TRACKER_PROTO_CMD_STORAGE_REPORT        84
+#define TRACKER_PROTO_CMD_STORAGE_REPORT        84  //report disk usage
 #define TRACKER_PROTO_CMD_STORAGE_REPLICA_CHG   85  //repl new storage servers
 #define TRACKER_PROTO_CMD_STORAGE_SYNC_SRC_REQ  86  //src storage require sync
 #define TRACKER_PROTO_CMD_STORAGE_SYNC_DEST_REQ 87  //dest storage require sync
@@ -25,6 +25,7 @@
 
 #define TRACKER_PROTO_CMD_SERVER_LIST_GROUP	91
 #define TRACKER_PROTO_CMD_SERVER_LIST_STORAGE	92
+#define TRACKER_PROTO_CMD_SERVER_DELETE_STORAGE	93
 #define TRACKER_PROTO_CMD_SERVER_RESP      	90
 #define TRACKER_PROTO_CMD_SERVICE_QUERY_STORE	101
 #define TRACKER_PROTO_CMD_SERVICE_QUERY_FETCH	102
