@@ -1,6 +1,7 @@
 
 Version 1.12  2008-10-06
   * client download file support callback function
+  * add a command to delete the inactive storage server
 
 Version 1.11  2008-10-04
   * kill report and sync threads when recv terminate signal
